<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="res_app_name">CoinBene</string>
    <string name="tab_market">Market</string>
    <string name="tab_trading">Trade</string>
    <string name="tab_otc">Legal Tender</string>
    <string name="tab_myself">Account</string>
    <string name="error_transfer">Failed to get info. Please try again later</string>
    <string name="market_title"> Market </string>
    <string name="market_tab_btc">BTC</string>
    <string name="market_tab_usdt">USDT</string>
    <string name="trade_title">Trade</string>
    <string name="trade_record">Order History</string>
    <string name="trade_buy">Buy</string>
    <string name="trade_sell">Sell</string>
    <string name="trade_buy_ok">Buy</string>
    <string name="trade_entrust">Cancel</string>
    <string name="entrust_price">Price</string>
    <string name="entrust_price_new">Price</string>
    <string name="entrust_volume">Order Quantity</string>
    <string name="entrust_amount">Filled Quantity</string>
    <string name="not_deal">Unfilled</string>
    <string name="part_deal">Partial Filled</string>
    <string name="all_deal">Filled</string>
    <string name="part_cancel">Partial Canceled</string>
    <string name="order_cancel_label">Canceled</string>
    <string name="new_entrust_tips">Open orders</string>
    <string name="all_entrust_history">View all orders</string>
    <string name="part_25">1/4</string>
    <string name="part_50">1/2</string>
    <string name="part_100">All</string>
    <string name="amount_label">Amount</string>
    <string name="able_label">Available</string>
    <string name="recharge">Deposit</string>
    <string name="buy_btn_txt">Buy %s</string>
    <string name="sell_btn_txt">Sell %s</string>
    <string name="input_price_hint">Price</string>
    <string name="input_num_hint">Quantity</string>
    <string name="pop_trade_pair_title">Asset</string>
    <string name="user_input_name">Email address/phone number</string>
    <string name="user_input_email">Please input your email address</string>
    <string name="user_email">Email</string>
    <string name="user_input_phone">please input your phone number</string>
    <string name="user_input_phone_hint">Your phone number</string>
    <string name="user_input_name_label">Username</string>
    <string name="user_input_phone_label">Phone Number</string>
    <string name="user_input_pwd">6-20 letters and numbers</string>
    <string name="user_input_pwd_label">Password</string>
    <string name="user_pwd_label">Password</string>
    <string name="user_login_btn">Log In</string>
    <string name="user_login_title">Log In</string>
    <string name="user_forget_pwd">Forgot Password?</string>
    <string name="user_menu_register">Sign Up</string>
    <string name="user_menu_phone_register">Sign Up</string>
    <string name="user_register_phone_right_btn">Email</string>
    <string name="user_menu_email_register">Sign Up</string>
    <string name="user_menu_register_title">Sign Up</string>
    <string name="user_msg_code_label">SMS Code</string>
    <string name="user_send_msg_code">Send</string>
    <string name="user_hint_msg_code">SMS code</string>
    <string name="user_register_btn">Sign Up</string>
    <string name="user_register_tips_first">By clicking the "Sign Up" button, you agree to the CoinBene</string>
    <string name="user_register_tips_sencond">Terms of Service</string>
    <string name="user_email_resend_btn">Resend</string>
    <string name="user_send_email_top_tips">* If you can not find your verification email, please check your spam box.</string>
    <string name="user_send_email_sended_label">The system has sent a link to your email. Please log in your email and complete the verification in 24 hours.</string>
    <string name="user_send_register_email_label">The system has sent a link to your email. Please log in your email and complete the change in 24 hours.</string>
    <string name="user_send_email_phone_sended_label">The system has sent a link to your email. Please log in your email and complete the setting in 24 hours.</string>
    <string name="user_activate_email_tips">The system will a link to your email address</string>
    <string name="user_send_email_menu_skip">Skip</string>
    <string name="user_menu_send_title">Email Verification</string>
    <string name="user_find_pwd_newpwd">New Password</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_next">Next</string>
    <string name="btn_go_login">Log In</string>
    <string name="user_find_pwd_title">Reset Password</string>
    <string name="dialog_get_pwd_title">Select the way to reset password</string>
    <string name="dialog_get_pwd_phone">By Phone Number</string>
    <string name="dialog_get_pwd_mail">By Email</string>
    <string name="country_label">Area Code</string>
    <string name="country_china">China（+86）</string>
    <string name="country_china_2">（+86）</string>
    <string name="country_Malaysia">Malaysia（+60）</string>
    <string name="country_Malay">Malaysia</string>
    <string name="country_Malaysia_2">（+60）</string>
    <string name="country_select_tips">Please select nationality</string>
    <string name="country_select_title">Country or Region</string>
    <string name="register_success">Success</string>
    <string name="title_second_check">2FA</string>
    <string name="myself_amount_label">Value</string>
    <string name="myself_recharge_label">Deposit</string>
    <string name="myself_withdraw_label">Withdraw</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer_accounts">Transfer</string>
    <string name="myself_record_label">Records</string>
    <string name="setting_title">Settings </string>
    <string name="setting_email">Email</string>
    <string name="setting_phone">Phone</string>
    <string name="setting_google_auth">Google Auth</string>
    <string name="setting_check_selected">Verification Code Preference</string>
    <string name="setting_modify_login_pwd">Password</string>
    <string name="setting_capital_pwd">PIN</string>
    <string name="setting_address">Manage Your Addresses</string>
    <string name="setting_about">About CoinBene</string>
    <string name="setting_quit">Log Out</string>
    <string name="setting_bind">Set</string>
    <string name="setting_rest">Reset</string>
    <string name="setting_item_set">Set</string>
    <string name="setting_modify">Change</string>
    <string name="setting_not_activate_label">Unverified</string>
    <string name="setting_gesture_pwd">Pattern</string>
    <string name="setting_finger_pwd">Touch ID</string>
    <string name="check_code_label">Choose the verification method when you set your PIN，withdraw and add addresses</string>
    <string name="check_msg_item_label">SMS Verify</string>
    <string name="check_google_item_label">Google Auth</string>
    <string name="check_msg_code_label">SMS Code</string>
    <string name="check_google_code_label">Google Auth</string>
    <string name="send_msg_code_success">The verification code has been sent successfully</string>
    <string name="send_msg_code_wait">%ds</string>
    <string name="send_msg_code_again">Resend</string>
    <string name="first_check_phone_msg">SMS Verify</string>
    <string name="first_check_google">Google Auth</string>
    <string name="please_check_one">Please select the verification method</string>
    <string name="with_draw_num_is_empty">Please input the amount</string>
    <string name="with_draw_address_is_empty">Please input the address</string>
    <string name="capital_pwd_is_empty">Please input your PIN</string>
    <string name="please_input_google_code">Please input Google Auth code</string>
    <string name="please_input_msg_code">SMS code</string>
    <string name="set_first_check_success">Success</string>
    <string name="bing_mail_title">Bind Email</string>
    <string name="bing_mail_account_label">Email</string>
    <string name="activate_send_mail_title">Email Verification</string>
    <string name="email_is_empay">Please login again</string>
    <string name="send_email_success">The email has been sent</string>
    <string name="data_transfer_fail">Transport Error</string>
    <string name="bing_google_title">Set Google Auth</string>
    <string name="rest_google_title">Reset Google Auth</string>
    <string name="bing_google_email_sended_label">The system has sent a link to your email. Please log in your email and complete the setting in 24 hours.</string>
    <string name="rest_google_email_sended_label">The system has sent a link to your email. Please log in your email and complete the setting in 24 hours.</string>
    <string name="send_email_fail">Email not sent</string>
    <string name="bing_phone_title">Bind phone</string>
    <string name="bind_phone_label">Phone Number</string>
    <string name="bing_phone_code">SMS Code</string>
    <string name="bing_phone_input_phone_hint">Your phone number</string>
    <string name="phone_is_not_right">Wrong phone number format</string>
    <string name="bing_phone_success">Success</string>
    <string name="send_email_wait">%ds</string>
    <string name="mail_is_not_veri">Please verify your email</string>
    <string name="mail_is_not_bind">Please bind your email</string>
    <string name="check_google_first">Please set Google Auth</string>
    <string name="setting_has_setted">Already Set</string>
    <string name="reset_phone_title">Modify cell phone</string>
    <string name="reset_old_phone_label">Old cell phone number</string>
    <string name="reset_old_phone_code">Verification Code</string>
    <string name="reset_new_phone_label">New mobile phone number</string>
    <string name="reset_new_phone_code">Verification Code</string>
    <string name="set_about_title">About CoinBene</string>
    <string name="set_about_version">%s</string>
    <string name="set_about_check_version">Check for Updates</string>
    <string name="set_about_contact_us_label">Email：support@coinbene.com</string>
    <string name="set_about_contact_us_label_key">Email</string>
    <string name="set_about_contact_us_value">support@coinbene.com</string>
    <string name="set_about_contact">Wechat：BK_Finance</string>
    <string name="set_about_wx_value">https://t.me/CB_coinbene</string>
    <string name="set_about_wx">Telegram</string>
    <string name="set_about_service_link">Terms of Service</string>
    <string name="set_about_cor">© 2017-2018 CoinBene All Rights Reserved</string>
    <string name="check_version_new">Already the latest version</string>
    <string name="version_update_label">Update</string>
    <string name="set_modify_pwd_title">Change Password</string>
    <string name="set_old_pwd_label">Old Password</string>
    <string name="set_new_pwd_label">New Password</string>
    <string name="modify_pwd_success">Success</string>
    <string name="set_modify_cap_pwd_title">Change PIN</string>
    <string name="set_old_cap_pwd_label">Old PIN</string>
    <string name="set_new_cap_pwd_label">New PIN</string>
    <string name="set_set_cap_pwd_title">Set PIN</string>
    <string name="transferOut">OUT</string>
    <string name="transferIn">IN</string>
    <string name="wechat">Wechat</string>
    <string name="weibo">Weibo</string>
    <string name="facebook">Facebook</string>
    <string name="friends">Moment</string>
    <string name="tecent_qq">QQ</string>
    <string name="options_sava_share">Save</string>
    <string name="res_yestoday_profit">Profit Yesterday</string>
    <string name="res_total_profit">Total Profit</string>
    <string name="res_seven_day_annual">7-day Annual Yield</string>
    <string name="res_transfer_now">Instant-in</string>
    <string name="res_yestoday_dividend">Allocation YSTD</string>
    <string name="res_total_dividend">Allocation Today</string>
    <string name="res_status_full">Filled</string>
</resources>