<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_Content"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/view_share_menu"
        app:layout_constraintDimensionRatio="1:1.77"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_share_menu"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:background="@color/res_background"
        app:layout_constraintBottom_toTopOf="@+id/view20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_wechat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/res_icon_wechat"
        app:layout_constraintStart_toStartOf="@+id/view_share_menu"
        app:layout_constraintTop_toTopOf="@+id/view_share_menu" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/wechat"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_wechat"
        app:layout_constraintStart_toStartOf="@+id/img_wechat"
        app:layout_constraintTop_toBottomOf="@+id/img_wechat" />

    <ImageView
        android:id="@+id/img_wechat_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/res_icon_wechat_circle"
        app:layout_constraintEnd_toStartOf="@+id/img_sina"
        app:layout_constraintStart_toEndOf="@+id/img_wechat"
        app:layout_constraintTop_toTopOf="@+id/view_share_menu" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/friends"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_wechat_circle"
        app:layout_constraintStart_toStartOf="@+id/img_wechat_circle"
        app:layout_constraintTop_toBottomOf="@+id/img_wechat_circle" />

    <ImageView
        android:id="@+id/img_sina"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/res_icon_sina"
        app:layout_constraintEnd_toStartOf="@+id/img_QQ"
        app:layout_constraintStart_toEndOf="@+id/img_wechat_circle"
        app:layout_constraintTop_toTopOf="@+id/view_share_menu" />

    <TextView
        android:id="@+id/tv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/weibo"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_sina"
        app:layout_constraintStart_toStartOf="@+id/img_sina"
        app:layout_constraintTop_toBottomOf="@+id/img_sina" />


    <ImageView
        android:id="@+id/img_QQ"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/res_icon_qq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_share_menu" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tecent_qq"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_QQ"
        app:layout_constraintStart_toStartOf="@+id/img_QQ"
        app:layout_constraintTop_toBottomOf="@+id/img_QQ" />

    <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/res_icon_facebook"
        app:layout_constraintStart_toStartOf="@+id/img_wechat"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/facebook"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_facebook"
        app:layout_constraintStart_toStartOf="@+id/img_facebook"
        app:layout_constraintTop_toBottomOf="@+id/img_facebook" />

    <ImageView
        android:id="@+id/img_save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/res_icon_download"
        app:layout_constraintEnd_toEndOf="@+id/img_wechat_circle"
        app:layout_constraintStart_toStartOf="@+id/img_wechat_circle"
        app:layout_constraintTop_toBottomOf="@id/img_wechat_circle" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/options_sava_share"
        android:textColor="@color/res_textColor_2"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/img_save"
        app:layout_constraintStart_toStartOf="@+id/img_save"
        app:layout_constraintTop_toBottomOf="@+id/img_save" />

    <View
        android:id="@+id/view20"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="@color/res_divider_tile"
        app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/res_background"
        android:gravity="center"
        android:text="@string/btn_cancel"
        android:textColor="@color/res_textColor_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="img_save,tv6" />
</androidx.constraintlayout.widget.ConstraintLayout>