<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/res_divider_tile"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fortune_white_card_bg"
        tools:layout_marginLeft="15dp"
        tools:layout_marginRight="15dp">

        <TextView
            android:id="@+id/tv_asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            tools:text="BTC"
            android:textColor="@color/res_textColor_1"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="42dp"
            android:layout_height="17dp"
            android:background="@drawable/fortune_status_bg"
            android:text="@string/res_status_full"
            tools:text="已满"
            android:textColor="#f99c03"
            android:textSize="11dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            app:layout_constraintTop_toTopOf="@id/tv_asset_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_asset_name"
            app:layout_constraintStart_toEndOf="@id/tv_asset_name"/>

        <TextView
            android:id="@+id/tv_seven_day_annual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="2.3421%"
            android:textColor="@color/res_green"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@id/tv_asset_name"
            app:layout_constraintTop_toBottomOf="@id/tv_asset_name" />


        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_transfer_now"
            style="@style/CoinBene.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:paddingLeft="12dp"
            android:paddingTop="7dp"
            android:paddingRight="12dp"
            android:paddingBottom="7dp"
            android:text="@string/res_transfer_now"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_seven_day_annual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_seven_day_annual"
            app:qmui_radius="16dp" />

        <TextView
            android:id="@+id/textview_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/res_seven_day_annual"
            android:textColor="@color/res_textColor_2"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="@id/tv_asset_name"
            app:layout_constraintTop_toBottomOf="@id/tv_seven_day_annual" />


        <TextView
            android:id="@+id/tv_yesterday_dividend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/res_yestoday_dividend"
            android:textColor="@color/res_textColor_1"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@id/tv_asset_name"
            app:layout_constraintTop_toBottomOf="@id/textview_21"
            android:layout_marginTop="10dp"
            tools:text="昨日分配: 23.32" />

        <TextView
            android:id="@+id/tv_history_dividend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/res_total_dividend"
            android:textColor="@color/res_textColor_1"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_yesterday_dividend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_yesterday_dividend"
            tools:text="累计分配: 23334.09" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1px"
            app:layout_constraintTop_toBottomOf="@id/tv_yesterday_dividend"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
