<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/res_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_asset_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/res_textColor_1"
        android:textSize="15dp"
        tools:text="BTC总金额"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_asset_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textColor="@color/res_textColor_1"
        android:textSize="16dp"
        tools:text="0.34332222"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_asset_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_asset_name"/>

    <TextView
        android:id="@+id/textview_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_yestoday_profit"
        android:textColor="@color/res_textColor_2"
        android:textSize="11dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_asset_name"
        app:layout_constraintTop_toBottomOf="@id/tv_asset_name"/>

    <TextView
        android:id="@+id/textview_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_total_profit"
        android:textColor="@color/res_textColor_2"
        android:textSize="11dp"
        android:layout_marginStart="154dp"
        app:layout_constraintTop_toTopOf="@id/textview_21"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_seven_day_annual_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_seven_day_annual"
        android:textColor="@color/res_textColor_2"
        android:textSize="11dp"
        app:layout_constraintTop_toTopOf="@id/textview_21"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/tv_yesterday_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="+12.13452345"
        android:textColor="@color/res_textColor_1"
        android:textSize="14dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/tv_asset_name"
        app:layout_constraintTop_toBottomOf="@id/textview_21"
        />

    <TextView
        android:id="@+id/tv_history_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="+0.23452345"
        android:textColor="@color/res_textColor_1"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="@id/tv_yesterday_interest"
        app:layout_constraintStart_toStartOf="@id/textview_22"/>

    <TextView
        android:id="@+id/tv_seven_day_annual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="4.82%"
        android:textColor="@color/res_textColor_1"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="@id/tv_yesterday_interest"
        app:layout_constraintEnd_toEndOf="@id/tv_seven_day_annual_key"/>

    <View
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/res_item_divider"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_yesterday_interest"/>

    <View
        android:id="@+id/divider_vertical_line"
        android:layout_width="2px"
        android:layout_height="30dp"
        android:background="@color/res_item_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line"/>

    <TextView
        android:id="@+id/btn_transfer_in"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/divider_vertical_line"
        app:layout_constraintBottom_toBottomOf="@id/divider_vertical_line"
        app:layout_constraintEnd_toEndOf="@id/divider_vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/transferIn"
        android:textColor="@color/res_blue"
        android:textSize="14dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/btn_transfer_out"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/divider_vertical_line"
        app:layout_constraintBottom_toBottomOf="@id/divider_vertical_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider_vertical_line"
        android:text="@string/transferOut"
        android:textColor="@color/res_blue"
        android:textSize="14dp"
        android:gravity="center"
        />

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/res_divider_tile"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_vertical_line"/>

</androidx.constraintlayout.widget.ConstraintLayout>